@@ -245,3 +245,4 @@ Revision	Log Message
 241		Add EU3 diplomacy
 242		Defer Mapping countries until last moment (breaks province discovery)
 243		Update localization text for converter mod
+244		Fix province discovery for land provinces
